--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css "
     />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>MicroPosts</title>
   </head>
   <body>
