--- a/index.html
+++ b/index.html
@@ -9,49 +9,51 @@
       href="https://bootswatch.com/4/minty/bootstrap.min.css"
     />
     <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css "
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>MicroPosts</title>
+    <title>My Covid rants</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary mb-3">
       <div class="container">
-        <a href="#" class="navbar-brand">MicroPosts</a>
+        <a href="#" class="navbar-brand">Covid Rants</a>
       </div>
     </nav>
 
     <div class="container postsContainer">
       <div class="card card-body card-form">
-        <h1>Your microposts</h1>
+        <h1>Rant it!</h1>
         <p class="lead">What's it gonna be?</p>
         <div class="form-group">
           <input
             type="text"
             id="title"
             class="form-control"
-            placeholder="Post Title"
+            placeholder="Rant Title"
           />
         </div>
         <div class="form-group">
           <textarea
             id="body"
             class="form-control"
-            placeholder="Posts starts here ..."
-          >
-          </textarea>
-          <input type="hidden" id="id" value="" />
-          <button class="post-submit btn btn-primary btn-block mt-4">
-            Post it
-          </button>
-          <span class="form-end"></span>
+            placeholder="Rant Body"
+          ></textarea>
         </div>
-        <br />
-        <div id="posts"></div>
+        <input type="hidden" id="id" value="" />
+        <button class="post-submit btn btn-primary btn-block">Post It</button>
+        <span class="form-end"></span>
       </div>
-      <footer class="mt-5 p-3 text-center bg-light">MicroPosts &copy</footer>
+      <br />
+      <div id="posts"></div>
     </div>
+
+    <footer class="mt-5 p-3 text-center bg-light">
+      Covid Rants &copy;
+    </footer>
 
     <script src="build/app.bundle.js"></script>
   </body>
